# hft-statistics

./: .gitignore  CLAUDE.md  CODEBASE.md  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/statistics/: acf.rs  intraday_correlation.rs  intraday_curve.rs  mod.rs  regime_accumulator.rs  reservoir.rs  streaming_dist.rs  transition_matrix.rs  vpin.rs  welford.rs
src/time/: mod.rs  regime.rs  resampler.rs
